# simple-cdd-yaml

./: .gitignore  404.html  CHANGELOG.md  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  setup.py  sitemap.xml
.githooks/: commit-msg
.github/templates/: .release_notes.md.j2  CHANGELOG.md.j2
.github/workflows/: ci.yml  docs.yaml  release.yaml
actions/: index.html
actions/apt/: index.html
actions/conf/: index.html
actions/debos/: index.html
actions/downloads/: index.html
actions/extra/: index.html
actions/overlay/: index.html
actions/preseed/: index.html
actions/recipe/: index.html
actions/run/: index.html
build-images/: index.html
build-images/build-in-docker/: index.html
build-images/build-with-debos/: index.html
build-images/test-on-qemu-with-uefi/: index.html
docs/: examples.md  getting_started.md  index.md  installation.md  introduction.md
docs/actions/: apt.md  conf.md  debos.md  downloads.md  extra.md  index.md  overlay.md  preseed.md  recipe.md  run.md
docs/build-images/: build-in-docker.md  build-with-debos.md  index.md  test-on-qemu-with-uefi.md
examples/: index.html
getting_started/: index.html
installation/: index.html
introduction/: index.html
recipes/: base.yaml  desktop.yaml  xfce.yaml
reference/: index.html
scripts/: add_sudoer.sh  configure_grub.sh  install_jitsi.sh  install_skype.sh  install_spotify.sh  install_vscodium.sh
search/: search_index.json
simple_cdd_yaml/: __init__.py  actions.py  recipe_interpreter.py  simple_cdd_yaml.py  yaml_loader.py  yaml_tools.py
(+30 files in other folders)
